--- a/lesson10/task2/styles.css
+++ b/lesson10/task2/styles.css
@@ -37,6 +37,7 @@ body {
   background-color: grey;
 }
 .text_Bar {
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
