--- a/lesson10/task2/styles.css
+++ b/lesson10/task2/styles.css
@@ -17,7 +17,7 @@ body {
   margin-left: 16px;
 }
 .nav-item {
-  margin-left: 16px;
+  margin-left: 15px;
 }
 .content {
   height: calc(100vh - 80px);
@@ -46,7 +46,7 @@ body {
   list-style: none;
 }
 .list_item {
-  padding-top: 40px;
+  line-height: 40px;
 }
 .footer {
   height: 40px;
