--- a/lesson10/task2/styles.css
+++ b/lesson10/task2/styles.css
@@ -14,10 +14,10 @@ body {
   padding: 10px;
   display: flex;
   list-style: none;
-  margin-left: 16px;
+  /* margin-left: 16px; */
 }
 .nav-item {
-  margin-left: 13px;
+  margin-left: 16px;
 }
 .content {
   height: calc(100vh - 80px);
