--- a/lesson10/task2/styles.css
+++ b/lesson10/task2/styles.css
@@ -17,7 +17,7 @@ body {
   /* margin-left: 16px; */
 }
 .nav-item {
-  margin-left: px;
+  margin-left: 17px;
 }
 .content {
   height: calc(100vh - 80px);
