--- a/lesson10/task2/styles.css
+++ b/lesson10/task2/styles.css
@@ -19,7 +19,7 @@ body {
 .nav-list {
   display: flex;
   list-style: none;
-  padding: 20px;
+  /* padding: 20px; */
 }
 .nav-item {
   margin-left: 16px;
