--- a/lesson10/task2/styles.css
+++ b/lesson10/task2/styles.css
@@ -18,9 +18,10 @@ body {
 .nav-list {
   display: flex;
   list-style: none;
+  margin-left: 16px;
 }
 .nav-item {
-  margin-left: 16px;
+  margin-right: 16px;
 }
 .content {
   height: calc(100vh - 80px);
