--- a/lesson10/task2/styles.css
+++ b/lesson10/task2/styles.css
@@ -1,10 +1,7 @@
 * {
   box-sizing: border-box;
-  margin: 0;
 }
-body {
-  height: 100%;
-}
+
 .header {
   height: 40px;
   background-color: yellow;
@@ -14,12 +11,12 @@ body {
   height: 40px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .nav-list {
   display: flex;
   list-style: none;
-  margin-left: 16px;
-  margin-left: 0;
+  /* margin-left: 0; */
 }
 .nav-item {
   margin-right: 16px;
