--- a/lesson10/task2/styles.css
+++ b/lesson10/task2/styles.css
@@ -39,7 +39,7 @@
   background-color: grey;
 }
 .text_Bar {
-  padding-top: 20px;
+  /* padding-top: 20px; */
   display: flex;
   flex-direction: column;
   align-items: center;
