--- a/lesson10/task5/styles.css
+++ b/lesson10/task5/styles.css
@@ -2,20 +2,15 @@
   box-sizing: border-box;
 }
 header {
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 .article {
   margin: 8px;
   padding: 16px;
   background-color: bisque;
+  flex: 1 0 300px;
 }
 .articles-list {
   display: flex;
   flex-wrap: wrap;
-}
-.article {
-  width: 300px;
-  flex-shrink: 1;
-  flex-grow: 2;
 }
